--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,2 +1,3 @@
 PORT=5000
 MONGODB_URI=mongodb+srv://student:teacher123@student-teacher-connect.mongodb.net/student-teacher-connect?retryWrites=true&w=majority
+FRONTEND_URL=https://your-vercel-app.vercel.app
